# cppBase_hw

./: .gitignore  README.md
Kurs_base_cpp/RaceDLL/: Air.cpp  Air.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  CamelFast.cpp  CamelFast.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FlyingCarpet.cpp  FlyingCarpet.h  Ground.cpp  Ground.h  RaceDLL.vcxproj  RaceDLL.vcxproj.filters  RoverBoots.cpp  RoverBoots.h  Transport.cpp  Transport.h
Kurs_base_cpp/Race_kurs/: Race_kurs.sln  Race_kurs.vcxproj  Race_kurs.vcxproj.filters  racing_simulator.cpp
Lesson_1/Task_11/: Task1.sln  Task1.vcxproj  task_1.cpp
Lesson_1/Task_12/: Task2.sln  Task2.vcxproj  Task_2.cpp
Lesson_1/Task_13/: Task3.sln  Task3.vcxproj  Task_3.cpp
Lesson_2/Task_21/: Task_1.sln  Task_1.vcxproj  Task_1.vcxproj.filters  task_21.cpp
Lesson_2/Task_22/: Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  task_22.cpp
Lesson_3/Task_31/: Task_31.sln  Task_31.vcxproj  Task_31.vcxproj.filters  task_31.cpp
Lesson_3/Task_32/: Task_32.sln  Task_32.vcxproj  Task_32.vcxproj.filters  task_32.cpp
Lesson_4/Task_41/: Task_41.sln  Task_41.vcxproj  Task_41.vcxproj.filters  task_41.cpp
Lesson_4/Task_41_var2/: Task_41_var2.sln  Task_41_var2.vcxproj  Task_41_var2.vcxproj.filters  (+1 more)
Lesson_9/Task_92/: CMakeLists.txt
Lesson_9/Task_92/header_files/: Figure.h  Quardrangle.h  Rhombus.h  Rigth_Triangle.h  Triangle.h
Lesson_9/Task_92/source_files/: Equilateral_Triangle.cpp  Figure.cpp  Isosceles_Triangle.cpp  Parallelogram.cpp  Quardrangle.cpp  Rect.cpp  Rhombus.cpp  Rigth_Triangle.cpp  Square.cpp  Triangle.cpp  task_53.cpp
(+116 files in other folders)
